@@ -4,6 +4,10 @@ Revision history for Perl extension PGXN::API
       - Removed the `Capfile` and `eg` directory from the source (and distribution).
         Examples for managing PGXN can now be found in the pgxn/pgxn-ops
         repository on GitHub.
+      - Switched from Text::Markdown to CommonMark for parsing and formatting
+        Markdown files (but not MultiMarkdown files). This allows code fences
+        to work and generates nicer HTML in general, but is stricter about
+        certain things.
 
 0.16.5  2016-06-22T18:03:05Z
       - Fixed a test failure on systems with a non-English locale, thanks to
